# FirstPrincipleAI

./: .gitignore  README.md
promptbase/: .env.example  (+5 more)
promptbase/backend/: Dockerfile  alembic.ini  pyproject.toml
promptbase/backend/alembic/: env.py
promptbase/backend/alembic/versions/: 2d5b633bba0e_initial_schema_all_tables.py  84f5bb4220a5_add_thinking_content_to_messages.py  a1b2c3d4e5f6_add_conversation_id_to_documents.py  b2c3d4e5f6a7_add_progress_to_documents.py  c3d4e5f6a7b8_add_default_model_to_providers.py  d4e5f6a7b8c9_add_cascade_deletes.py  e5f6a7b8c9d0_nullable_conversation_team_id.py  f6a7b8c9d0e1_pin_and_nullable_doc_team.py
promptbase/backend/app/: config.py  main.py
promptbase/backend/app/admin/: importer.py  pack_builder.py  routes.py
promptbase/backend/app/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py
promptbase/backend/app/chat/: models.py  routes.py  schemas.py  service.py  think_parser.py
promptbase/backend/app/compiler/: budget.py  classifier.py  compiler.py  models.py  schemas.py
promptbase/backend/app/documents/: chunker.py  models.py  parser.py  retriever.py  routes.py  schemas.py
promptbase/backend/app/export/: pdf.py  renderer.py  routes.py
promptbase/backend/app/providers/: anthropic.py  base.py  models.py  ollama.py  openai_provider.py  openrouter.py  registry.py
promptbase/backend/app/workers/: celery_app.py  tasks.py
promptbase/backend/tests/: test_budget.py  test_chunker.py  test_classifier.py  test_compiler.py  test_export.py  test_parser.py  test_providers.py  test_think_parser.py
(+68 files in other folders)
