[project]
name = "promptbase"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "python-docx>=1.1.0",
    "mistune>=3.0.0",
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
